--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# Example script outputs
+examples/outputs/
+
+# Excel temp files
+~$*.xlsx
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
